<resources>
    <string name="app_name">Ai Music</string>
    <string name="app_sign">iRulu Music Lamp</string>
    <string name="settings">Settings</string>
    <string name="local_music">Local Music</string>
    <string name="playing_list">Playing List</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scene_cant_delete">The default scene mode cann\'\t be deleted.</string>
    <string name="scene_add">Add new scene mode</string>
    <string name="scene_cant_edit">The default scene mode cann\'\t be changed.</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="dont_select_any_lamp">You have to select at least one lamp.</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="rest">Rest</string>
    <string name="romantic">Romantic</string>
    <string name="comfortable">Comfortable</string>
    <string name="natural">Natural</string>
    <string name="devices">Devcie</string>
    <string name="title_activity_online_music_library">OnlineMusicLibraryActivity</string>
    <string name="scan_text">Please make sure the qr code in the box.</string>
    <string name="title_activity_setting_wlan">SettingWlanActivity</string>
    <string name="title_activity_add_scene">AddSceneActivity</string>
    <string name="version_info">Version: v1.0.0     Release Date: 2015.05.13</string>
    <string name="service_agreement">Service Agreement</string>
    <string name="welcome_page">Welcome Page</string>
    <string name="set_scene_mode">Set Scene Mode</string>
    <string name="next">Next</string>
    <string name="timing_task">Timing Task</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="time_turn_off">Time to turn off the lights</string>
    <string name="into_box_to_scan_qr">Please put QR code into the box.\n      Then can automatically scan.</string>
    <string name="signin_phone_hint">Please enter phone number</string>
    <string name="signin_password_hint">Please enter password</string>
    <string name="verification_code">Verification Code</string>
    <string name="get_verification_code">Get Verification Code</string>
    <string name="get">Get</string>
    <string name="support_countries">Support Countries</string>
    <string name="sigup_password_hint">New Password(6~12)</string>
    <string name="sign_up">Sign Up</string>
    <string name="music_library">Music Library</string>
    <string name="set_wifi">Set Wi-Fi</string>
    <string name="close">Close</string>
    <string name="five_minutes">5 Minutes</string>
    <string name="custom">Custom</string>
    <string name="stop_play">Stop Play</string>
    <string name="timing">Timing</string>
    <string name="scene_mode">Scene Mode</string>
    <string name="reset_network">Reset Network</string>
    <string name="return1">Return</string>
    <string name="qr_code_scanning">Scanning..</string>
    <string name="search">Search</string>
    <string name="friend_request_list">Request List</string>
    <string name="female">Female</string>
    <string name="ok">OK</string>
    <string name="male">Male</string>
    <string name="musices">Music</string>
    <string name="lamp">Lamp</string>
    <string name="info">Info</string>
    <string name="send_voice">Push To Send</string>
    <string name="send">Send</string>
    <string name="text">Text</string>
    <string name="my_friends">My Friends</string>
    <string name="volume">Volume</string>
    <string name="name">Name</string>
    <string name="content">Content</string>
    <string name="password">Password</string>
    <string name="hello">Hello</string>
    <string name="please_enter">Please enter your information feedback.</string>
    <string name="submit">Submit</string>
    <string name="my_smart_speaker_lamp">My Music Lamp</string>
    <string name="downloads">Download</string>
    <string name="recent">Recent</string>
    <string name="favorite">Favorite</string>
    <string name="my_song_list">My Song List</string>
    <string name="my_honey">My Honey</string>
    <string name="slogan">Smart future intelligent sound from the beginning!</string>
    <string name="scan">Scan</string>
    <string name="my_devices">My Devices</string>
    <string name="sign_out">Sign Out</string>
    <string name="exit_app">Exit Application</string>
    <string name="my_lamps">My Lamps</string>
    <string name="colourful">Colourful</string>
    <string name="sunlight">Sunlight</string>
    <string name="gender">Gender</string>
    <string name="unknown_gender">Unknown Gender</string>
    <string name="signature">Signature</string>
    <string name="user_not_signed">The user is not signed.</string>
    <string name="unknown_number">Unknown phone number.</string>
    <string name="view_privacy">View the privacy:</string>
    <string name="send_voice2">Send voice:</string>
    <string name="loading">Loading...</string>
    <string name="restart_airplay">Restart AirPlay</string>
    <string name="restart_dlna">Restart DLNA</string>
    <string name="imt_smart_life">Smart life by IMT</string>
    <string name="sign_in">Sign In</string>
    <string name="skip">Skip</string>
    <string name="user_name">User Name</string>
    <string name="forget_password">Forget Password?</string>
    <string name="scan_to_add">Scan To Add</string>
    <string name="phone_number">Phone Number</string>
    <string name="name_input_hint">Phone Number:</string>
    <string name="password_input_hint">Password:</string>
    <string name="ta_id">TA\'\s\ ID</string>
    <string name="search_song_hint">Song Name/Artist/Album</string>
    <string name="local_devices">Local Devices</string>
    <string name="remote_devices">Remote Devices</string>
    <string name="user_center">User Center</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="nick_name">Nick Name</string>
    <string name="my_qr_code">My QR Code</string>
    <string name="signatures">Signatures</string>
    <string name="add_successfully">Add Successful.</string>
    <string name="update">Update</string>
    <string name="undiscover_new_version">The current is the latest version.</string>
    <string name="downloading_firmware">Downloading Firmware...</string>
    <string name="network_error">Network Error.</string>
    <string name="discover_update">Discover Update</string>
    <string name="select_device">Select Device</string>
    <string name="voice">Voice</string>
    <string name="send_failure">Failed.</string>
    <string name="recording_time_too_short">The recording time is too short.</string>
    <string name="server_error">Server Error.</string>
    <string name="download_songs">Download Songs</string>
    <string name="new_friend">New Friend</string>
    <string name="user_deleted_successfully">The user deleted successful.</string>
    <string name="set_permissions_friends">Set Permissions Friends</string>
    <string name="reading">Reading</string>
    <string name="take_video">Take Video</string>
    <string name="enter_friend_id">Please enter a friend ID.</string>
    <string name="last_page">The current is the last page.</string>
    <string name="find_following_friends">Find following friends</string>
    <string name="previous_page">Previous Page</string>
    <string name="next_page">Next Page</string>
    <string name="request_has_been_sent">The request has been sent.</string>
    <string name="turn_off_lamps">Turn off the lamps.</string>
    <string name="verification_code_has_been_submitted_successfully">Verification code has been submitted.</string>
    <string name="password_not_empty">Password cannot be empty.</string>
    <string name="signup_sucessfully">Sign up successful.</string>
    <string name="password_has_been_updated_successfully">Password has been updated successful.</string>
    <string name="verification_code_has_been_sent">The Verification code has been sent.</string>
    <string name="get_countries_successfully">Get countries successful.</string>
    <string name="verification_code_error">Error Verification code .</string>
    <string name="phone_number_not_empty">The phone number can not be empty.</string>
    <string name="phone_number_error">The phone number you entered is wrong.</string>
    <string name="password_not_meet_specification">The password does not meet the specification.</string>
    <string name="verification_code_not_empty">The verification code cann not be empty.</string>
    <string name="recent_play">Recent Play</string>
    <string name="configuring_devices">Configuring devices, Please wait...</string>
    <string name="connected_wifi_hospots_successfully">Connect to Wi-Fi hotspots successful.</string>
    <string name="automatic_configuration_failure">Automatic configuration failure.</string>
    <string name="password_less_than_6">The password length can not be less than 6.</string>
    <string name="connected_ap_not_suitable_smart_config">it is not suppose to use smart configure when the device is connecting to the AP</string>
    <string name="no_conn_cannot_automatic_config">you need to connect to an available 2.4g wifi to use the smart configure.</string>
    <string name="send_device_4g">you need to connect to an available 2.4g wifi to use the smart configure.</string>
    <string name="select_4g_network">chouse a 2.4G wifi</string>
    <string name="enter_wifi_password">Please enter your Wi-Fi password</string>
    <string name="wifi_connected_smart_config">use the smart configure after you connected to an available 2.4g wifi</string>
    <string name="connected_refresh_devices_list">Network configure is completely, please refresh the device after the connected sound!</string>
    <string name="red_heart_songs_list">Red-Heart Songs List</string>
    <string name="update_red_heart_first">Please update the Red-heart songs list first, or select online playlists!</string>
    <string name="offline">Offline</string>
    <string name="confirmation_device">No Device Found!</string>
    <string name="enter_current_wifi_password">Please enter the current connection Wi-Fi\'\s password.</string>
    <string name="current_wifi_no_password">If no password, please click ok button directly!</string>
    <string name="autamatic_config_failed">Automatic configuration failed, please make sure the input the correct password!</string>
    <string name="make_sure_device_open">Please make sure your device has been opened.</string>
    <string name="delete_signin_info">Whether to delete the user signin information?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="after_start_remove_user_info">Confirm exit</string>
    <string name="confrm_delete_download_songs">Confirm to delete all download songs?</string>
    <string name="select_image">Select Image</string>
    <string name="enter_frinefd_id">Please enter frined\'\s id.</string>
    <string name="select_need_config_device">Please select need to configure the device.</string>
    <string name="no_found_unconfig_device">Not found device what doesn\'\t configure.</string>
    <string name="downloading">downloading</string>
    <string name="add_to_red_heart">Has been added to the Red-heart songs list.</string>
    <string name="cancelled_red_heart">Has cancelled the Red-haert songs list.</string>
    <string name="add_to_play_list">Has been add to playlist</string>
    <string name="clear_user_data">Clear User Data</string>
    <string name="devices_update">Device Update</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="clear_musics">Clear Local Musics</string>
    <string name="feed_back">Feed Back</string>
    <string name="musicjumpswitch">Music Jump</string>
</resources>