<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffdddddd">
    <FrameLayout
        android:layout_width="match_parent"
        android:background="#ff332288"
        android:layout_height="wrap_content">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:id="@+id/back"
            android:text="@string/return1"
            android:background="@drawable/gray_shape_button"
            android:src="@drawable/back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:textColor="#ccffffff"
            android:text="@string/my_friends"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:id="@+id/add"
            android:text="@string/add"
            android:background="@drawable/gray_shape_button"
            android:src="@drawable/add"/>
        </FrameLayout>
<ListView
    android:id="@+id/friendList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"/>
</LinearLayout>