<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="80dp"
    android:background="@color/background_floating_material_dark" >

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:text="@string/return1"
        android:background="@drawable/gray_shape_button"
        android:src="@drawable/back" />

    <TextView
        android:id="@+id/textview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:text="@string/qr_code_scanning"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonloveID"
        android:background="#00000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:layout_centerVertical="true"
        android:textColor="@android:color/white"
        android:layout_alignParentRight="true"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/button_function"/>

    <!--android:layout_marginRight="2dip"-->
    <!--android:minWidth="70dip"-->
    <!--android:background="@drawable/mm_title_right_btn"-->
    <!--android:src="@drawable/mm_title_btn_menu_normal"-->
</RelativeLayout>