<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="48dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:id="@+id/back"
            android:text="@string/cancel"
            android:textColor="#818181" />

        <Button
            android:layout_width="wrap_content"
            android:id="@+id/button_confirm"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="#818181" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CBCBCB" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <antistatic.spinnerwheel.WheelVerticalView
            android:id="@+id/wheel_hour"
            android:layout_width="70dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            app:selectionDivider="@drawable/divider_dark_gradient_horizontal"
            app:selectionDividerHeight="1dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours"
            android:textColor="#818181" />

        <antistatic.spinnerwheel.WheelVerticalView
            android:id="@+id/wheel_minute"
            android:layout_width="70dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            app:selectionDivider="@drawable/divider_dark_gradient_horizontal"
            app:selectionDividerHeight="1dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minutes"
            android:textColor="#818181" />

    </LinearLayout>

</LinearLayout>
